--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,14 @@
       type="font/woff2"
       crossorigin="anonymous"
     />
+    <link
+      rel="preload"
+      href="Muyao.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin="anonymous"
+      />
+
 
     <link
       rel="manifest"
